// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
.emotion-0 {
  font-size: 0.875rem;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  line-height: 1.5;
}

<li
  class="emotion-0"
  data-test-id="cf-ui-list-item"
>
  ListItem
</li>
`;

exports[`renders the component with an additional class name 1`] = `
.emotion-0 {
  font-size: 0.875rem;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  line-height: 1.5;
}

<li
  class="emotion-0 my-extra-class"
  data-test-id="cf-ui-list-item"
>
  ListItem
</li>
`;
